--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,7 +95,7 @@ background-color: #0072bb;
 color: #ffffff;
 }
 
-.ServiceOffering {
+.serviceOffering {
 width: 75%;
 display: inline-block;
 margin-left: 20px;
